[gd_scene load_steps=14 format=3 uid="uid://dhc7ilseu5wxi"]

[ext_resource type="Script" uid="uid://8rjkqjnfxdrm" path="res://Scripts/main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://bo110nyksxkcj" path="res://Assets/dogica.ttf" id="2_fu7sn"]
[ext_resource type="Texture2D" uid="uid://drj6eu3pinaj6" path="res://Assets/title-card.jpg" id="2_n45e2"]
[ext_resource type="AudioStream" uid="uid://e18morrix61k" path="res://Assets/Sketchbook 2024-05-01_02.ogg" id="4_jix8l"]
[ext_resource type="AudioStream" uid="uid://chtg5d750uiwa" path="res://Assets/Sounds/Buttons/button_fx_mid_004_cc0_avr.wav" id="4_opfnp"]
[ext_resource type="Script" uid="uid://duvn7qr4dy7oa" path="res://Scripts/master.gd" id="5_glbon"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("2_n45e2")
modulate_color = Color(0.412152, 0.412153, 0.412152, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0.720467, 0.720468, 0.720467, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlkkf"]
bg_color = Color(0.517184, 0.517184, 0.517184, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_glbon"]
color = Color(0.204097, 5.96821e-06, 0.880312, 1)
thickness = 8

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -59.0
offset_right = 222.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Start" type="Button" parent="Buttons"]
texture_filter = 1
texture_repeat = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Start Game"

[node name="Options" type="Button" parent="Buttons"]
texture_filter = 1
texture_repeat = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Options"

[node name="Quit" type="Button" parent="Buttons"]
texture_filter = 1
texture_repeat = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Quit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource("4_opfnp")
volume_db = -15.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -303.0
offset_top = 77.0
offset_right = 380.0
offset_bottom = 260.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.80444, 0.692912, 0.291893, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 100
text = "Raniag"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jix8l")
autoplay = true
parameters/looping = true

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.5
offset_top = -188.5
offset_right = 313.5
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 0
offset_top = 14.5
offset_right = 629.0
offset_bottom = 71.5
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 30
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options"]
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_left = 133.5
offset_top = 299.5
offset_right = 493.5
offset_bottom = 363.5
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nlkkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Back
"

[node name="Master" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 154.5
offset_top = 189.5
offset_right = 480.5
offset_bottom = 252.5
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_glbon")
min_value = -80.0
max_value = 0.0
script = ExtResource("5_glbon")

[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Options/Master" to="Options/Master" method="_on_value_changed"]
